# ai-app-template

./: .env-template  .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  rustfmt.toml
.devcontainer/: devcontainer.json
common/: Cargo.toml
common/src/: enums.rs  hash.rs  id.rs  jwt.rs  lib.rs  url.rs  utils.rs  vars.rs
composer/: Cargo.toml
composer/src/: composer.rs  composer_enum.rs  lib.rs  openai.rs  prompt.rs  utils.rs
database/: Cargo.toml
database/src/: lib.rs
database/src/collection/: functions.rs  models.rs
database/src/document/: functions.rs  models.rs
database/src/group/: functions.rs  mod.rs  models.rs
database/src/task/: functions.rs
database/src/task/models/: callback_task.rs  download_task.rs  indexing_task.rs  mod.rs  task.rs  task_kind.rs  upload_task.rs
database/src/user/: functions.rs  models.rs
document/: Cargo.toml
document/src/: lib.rs
document/src/chunking/: mod.rs  overlapped.rs
document/src/collector/: colleced_file.rs  file_collector.rs  mod.rs  utils.rs
document/src/document/: block_quote.rs  code.rs  document.rs  document_meta.rs  heading.rs  image.rs  inline_code.rs  inline_math.rs  list.rs  list_item.rs  math.rs  mod.rs  node.rs  paragraph.rs  point.rs  position.rs  table.rs  table_cell.rs  table_row.rs  text.rs  text_group.rs
document/src/docx/: docx_meta.rs  extractor.rs  helper.rs  mod.rs  parser.rs
document/src/mime/: constants.rs  mod.rs  utils.rs
document/src/pdf/: alignment.rs  analyser.rs  constants.rs  element.rs  extractor.rs  font_weight.rs  grouper.rs  helper.rs  mod.rs  page.rs  parser.rs  point.rs  rect.rs  text_element.rs  text_element_group.rs  text_element_group_kind.rs  text_kind.rs  text_line.rs
document/src/utils/: grouper.rs  hasher.rs  mod.rs  stats.rs  text.rs
helpers/cognitoidentityprovider-helper/: Cargo.toml  Makefile.toml
helpers/cognitoidentityprovider-helper/src/: lib.rs
helpers/s3-helper/: Cargo.toml
helpers/s3-helper/src/: error.rs  lib.rs
indexer/: Cargo.toml  Makefile.toml
indexer/src/: context.rs  indexer.rs  indexing_meta.rs  lib.rs  utils.rs
indexer/src/embedding/: minilm.rs  mod.rs  model.rs  model_id.rs  openai.rs
indexer/src/graph/: graph.rs  mod.rs  node.rs
indexer/src/math/: mod.rs  normalize.rs  pooling.rs  similarity.rs
lambdas/callback-worker/: Cargo.toml  Makefile.toml  README.md
lambdas/callback-worker/src/: main.rs
lambdas/collections-api/: Cargo.toml  Makefile.toml
lambdas/collections-api/src/: delete_handler.rs  get_handler.rs  main.rs  post_handler.rs  put_handler.rs
lambdas/conversation-api/: Cargo.toml  Makefile.toml
lambdas/conversation-api/src/: main.rs
lambdas/document-downloader/: Cargo.toml  Makefile.toml
lambdas/document-downloader/src/: main.rs
lambdas/document-indexer/: Cargo.toml  Makefile.toml  README.md
lambdas/document-indexer/src/: main.rs
lambdas/document-upload-worker/: Cargo.toml  Makefile.toml  README.md
lambdas/document-upload-worker/src/: main.rs
lambdas/documents-api/: Cargo.toml  Makefile.toml
lambdas/documents-api/src/: delete_handler.rs  get_handler.rs  main.rs  post_handler.rs
lambdas/groups-api/: Cargo.toml  Makefile.toml
lambdas/groups-api/src/: delete_handler.rs  get_handler.rs  post_handler.rs  put_handler.rs
lambdas/search-api/: Cargo.toml  Makefile.toml
lambdas/search-api/src/: main.rs
lambdas/slack-api/: Cargo.toml  Makefile.toml
lambdas/slack-api/src/: get_handler.rs  main.rs  post_handler.rs
lambdas/slack-postman/: Cargo.toml  Makefile.toml  README.md
lambdas/slack-postman/src/: main.rs
lambdas/slack-query-worker/: Cargo.toml  Makefile.toml  README.md
lambdas/slack-query-worker/src/: main.rs
lambdas/users-api/: Cargo.toml  Makefile.toml
lambdas/users-api/src/: main.rs  put_handler.rs
slack/: Cargo.toml  Makefile.toml
slack/src/: auth.rs  chat.rs  lib.rs  utils.rs
