[package]
name = "composer"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[dependencies]
# Local
common.workspace = true
indexer.workspace = true
s3-helper.workspace = true

async-openai.workspace = true
aws-sdk-s3.workspace = true
anyhow.workspace = true
chrono.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
