[package]
name = "database"
version = "0.1.0"
edition.workspace = true
authors.workspace = true


[dependencies]
# Local
common.workspace = true

anyhow.workspace = true
aws-sdk-dynamodb.workspace = true
chrono.workspace = true
typed-builder.workspace = true
derive-getters.workspace = true
serde.workspace = true
serde_dynamo.workspace = true
serde_json.workspace = true
tracing.workspace = true
