[package]
name = "document"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[dependencies]
# Local
common.workspace = true

anyhow.workspace = true
derive-getters.workspace = true
chrono.workspace = true
docx-rs.workspace = true
hex.workspace = true
pdfium-render.workspace = true
rayon.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tiktoken-rs.workspace = true
typed-builder.workspace = true
tracing.workspace = true
url.workspace = true
