[package]
name = "indexer"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
# Local
common.workspace = true
document.workspace = true
s3-helper.workspace = true

anyhow.workspace = true
async-openai.workspace = true
aws-sdk-s3.workspace = true
base64ct.workspace = true
derive-getters.workspace = true
ndarray.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokenizers.workspace = true
tokio.workspace = true
typed-builder.workspace = true
tract-onnx.workspace = true
tract.workspace = true
uuid.workspace = true
tracing.workspace = true
