[package]
name = "callback-worker"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
#Local
common.workspace = true
database.workspace = true

aws_lambda_events.workspace = true
aws-config.workspace = true
aws-sdk-dynamodb.workspace = true
lambda_runtime.workspace = true
native-tls.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
