[package]
name = "conversation-api"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[dependencies]
# Local
common.workspace = true
composer.workspace = true
database.workspace = true
indexer.workspace = true

anyhow.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
aws-sdk-dynamodb.workspace = true
lambda_http.workspace = true
lambda_runtime.workspace = true
native-tls.workspace = true
serde_json.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
