[package]
name = "document-downloader"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
# Local
common.workspace = true
database.workspace = true
document.workspace = true
s3-helper.workspace = true

aws_lambda_events.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
aws-sdk-dynamodb.workspace = true
lambda_runtime.workspace = true
native-tls.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
